  * use Format instead of Format-Specification in debian/copyright and fix URL
    to use alioth's new anonscm location.
  * make lintian happier:
    - I: b43-asm: spelling-error-in-manpage b43-dasm.1 allows to allows one to
    - W: b43-asm: manpage-has-useless-whatis-entry brcm80211-fwconv.1
    - W: b43-asm: manpage-has-useless-whatis-entry brcm80211-ivaldump.1
  * override non-fixable lintian warnings:
    - b43-asm source: debian-watch-file-is-missing
    - b43-asm: no-upstream-changelog
    - b43-asm: no-homepage-field
  * add crude get-orig-source target.
  * update git URI to use git://git.bues.ch/b43-tools.git.
  * add initial help2man based manpages for brcm80211-{ivaldump,fwconv}.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 10 Nov 2011 19:24:45 +0100

b43-asm (0~20080619-0+c1.aptosid.9) unstable; urgency=low

  * rebuild and switch to aptosid versioning.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Sep 2010 13:33:09 +0200

b43-asm (0~20080619-0+c0.sidux.8) unstable; urgency=low

  * fix git:// upstream URL to the new address.
  * update copyright years.
  * update machine-readable debian/copyright to DEP: 5, rev=135
  * switch to compat level 8.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Aug 2010 03:25:33 +0200

b43-asm (0~20080619-0+c0.sidux.7) unstable; urgency=low

  * bump standards version to 3.9.1, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 03 Aug 2010 15:37:57 +0200

b43-asm (0~20080619-0+c0.sidux.6) unstable; urgency=low

  * switch to dpkg-source 3.0 (quilt) format.
  * bump standards version to 3.9.0, no changes necessary.
  * update copyright years.
  * fold build-/ dependencies in debian/control.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Jul 2010 01:00:29 +0200

b43-asm (0~20080619-0+c0.sidux.5) unstable; urgency=low

  * remove boilerplate comments from debian/rules.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 01 Feb 2009 04:16:45 +0100
